@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-05T16:21:04Z",
-  "count_outdated" : 591,
-  "uniques_outdated" : 279,
-  "count" : 624,
+  "timestamp" : "2023-11-06T01:19:48Z",
+  "count_outdated" : 592,
+  "uniques_outdated" : 280,
+  "count" : 625,
   "uniques" : 294,
   "clones" : [
-    {
-      "timestamp": "2023-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-24T00:00:00Z",
       "count": 2,
@@ -124,9 +115,9 @@
     },
     {
       "timestamp": "2023-11-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
