@@ -1,3 +1,12 @@
+2023-11-06T01:19:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6765093970 # 931
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
+* notice: last 14d: unq all: 2 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 279 591 / 294 624
+* notice: next accum: outdated-unq outdated-all / unq all: 280 592 / 294 625
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2023-10-23] / [2023-11-05]
+
 2023-11-05T16:21:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6762440947 # 930
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
